// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execution runtime composer composes multiple execution runtimes 1`] = `
[
  {
    "default": true,
    "name": "MyRuntime1",
    "sourcePath": "./some/path/to/file1.js",
    "type": "node",
  },
  {
    "default": false,
    "name": "MyRuntime2",
    "sourcePath": "./some/path/to/file2.js",
    "type": "node",
  },
  {
    "default": false,
    "name": "$GAUDI_INTERNAL",
    "sourcePath": "/home/hkasabasic/work/workspaces/gaudi/gaudi/src/composer/hooks",
    "type": "node",
  },
]
`;

exports[`execution runtime composer composes single execution runtime 1`] = `
[
  {
    "default": true,
    "name": "MyRuntime1",
    "sourcePath": "./some/path/to/file1.js",
    "type": "node",
  },
  {
    "default": false,
    "name": "$GAUDI_INTERNAL",
    "sourcePath": "/home/hkasabasic/work/workspaces/gaudi/gaudi/src/composer/hooks",
    "type": "node",
  },
]
`;

exports[`execution runtime composer makes a single runtime the default one 1`] = `
[
  {
    "default": true,
    "name": "MyRuntime1",
    "sourcePath": "./some/path/to/file1.js",
    "type": "node",
  },
  {
    "default": false,
    "name": "$GAUDI_INTERNAL",
    "sourcePath": "/home/hkasabasic/work/workspaces/gaudi/gaudi/src/composer/hooks",
    "type": "node",
  },
]
`;
